--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "mui-select-with-search",
+  "name": "mui-select-with-search-vivek",
   "version": "0.1.1",
   "description": "Select component",
   "main": "./lib/index.js",
   "scripts": {
     "build": "babel ./src -d ./lib --presets=es2015,react,stage-2",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "prepublish": "npm run build"
   },
   "author": "vivek anand",
   "license": "MIT",
   "dependencies": {
-    "react-select": "^2.2.0",
-    "classnames": "2.2.6"
+    "classnames": "2.2.6",
+    "react-select": "^2.2.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^1.0.0 || ^3.0.0",
