--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mui-select-with-search",
+  "name": "mui-select-with-search-vivek",
   "version": "0.1.1",
   "description": "Select component",
   "main": "./lib/index.js",
